--- a/package.json
+++ b/package.json
@@ -3,20 +3,21 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "@angular/animations": "^10.0.0",
-    "@angular/common": "^10.0.0",
-    "@angular/compiler": "^10.0.0",
-    "@angular/core": "^10.0.0",
-    "@angular/forms": "^10.0.0",
-    "@angular/platform-browser": "^10.0.0",
-    "@angular/platform-browser-dynamic": "^10.0.0",
-    "@angular/router": "^10.0.0",
-    "ag-grid-angular": "^24.0.0",
-    "ag-grid-community": "^24.0.0",
-    "core-js": "^3.6.5",
-    "rxjs": "^6.5.5",
-    "tslib": "^2.0.0",
-    "zone.js": "^0.10.3"
+    "@ag-grid-community/all-modules": "^24.0.0",
+    "@angular/animations": "10.1.5",
+    "@angular/common": "10.1.5",
+    "@angular/compiler": "10.1.5",
+    "@angular/core": "10.1.5",
+    "@angular/forms": "10.1.5",
+    "@angular/platform-browser": "10.1.5",
+    "@angular/platform-browser-dynamic": "10.1.5",
+    "@angular/router": "10.1.5",
+    "ag-grid-angular": "24.0.0",
+    "ag-grid-community": "24.0.0",
+    "core-js": "3.6.5",
+    "rxjs": "6.6.3",
+    "tslib": "2.0.2",
+    "zone.js": "0.10.3"
   },
   "scripts": {
     "ng": "ng",
