--- a/package.json
+++ b/package.json
@@ -7,16 +7,20 @@
     "@angular/animations": "10.1.5",
     "@angular/common": "10.1.5",
     "@angular/compiler": "10.1.5",
+    "@angular/compiler-cli": "10.1.5",
     "@angular/core": "10.1.5",
     "@angular/forms": "10.1.5",
+    "@angular/localize": "^10.0.0",
     "@angular/platform-browser": "10.1.5",
     "@angular/platform-browser-dynamic": "10.1.5",
     "@angular/router": "10.1.5",
+    "@ng-bootstrap/ng-bootstrap": "^7.0.0",
     "ag-grid-angular": "24.0.0",
     "ag-grid-community": "24.0.0",
     "core-js": "3.6.5",
     "rxjs": "6.6.3",
     "tslib": "2.0.2",
+    "typescript": ">=3.9 <4.1",
     "zone.js": "0.10.3"
   },
   "scripts": {
